--- a/style.css
+++ b/style.css
@@ -5,27 +5,24 @@ body {
 }
 
 
-#game-board {
+#board {
 width: 400px;
 height: 400px;
-display: grid;
-grid-template-columns: repeat(4, 20vmin);
-grid-template-rows: repeat(4, 20vmin);
 background: #BBADA0;
-border: 5px solid #bbada0;
+border: 5px solid #a88769;
 margin: 0 auto;
 display: flex;
 flex-wrap: wrap;
 }
 
-.squares {
+#square {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 90px;
   width: 90px;
   border: 5px solid #8F7A66; 
-  font-size: 50px;
+  font-size: 45px;
   font-weight: bold;
 
   /* transition: 100ms ease-in-out; */
