--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   
-  text-align:center;
+  text-align: center;
 
 }
 
@@ -15,8 +15,8 @@ display: flex;
 flex-wrap: wrap;
 }
 
-#square {
-  display: flex;
+.square {
+ 
   justify-content: center;
   align-items: center;
   height: 90px;
@@ -26,11 +26,14 @@ flex-wrap: wrap;
   font-weight: bold;
 
   /* transition: 100ms ease-in-out; */
-
-  
-
 }
 
 .newBtn {
   margin: 0 auto;
+}
+
+
+.x2 {
+  background-color: #BBADA0;
+  color: #727371;
 }
