--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 body {
   background: #faf8ef;
   text-align: center;
+ 
 
 }
-
+p {
+  width: 350px;
+  text-align: center;
+  margin: 50px auto;
+  font-size: 23px;
+  font-family: 'Roboto', sans-serif;;
+}
+.title {
+  font-family: 'Roboto', sans-serif;
+  font-size: 50px;
+}
 
 #board {
 width: 400px;
@@ -14,6 +25,8 @@ margin: 0 auto;
 display: flex;
 flex-wrap: wrap;
 border-radius: 5px;
+
+
 }
 
 .square {
@@ -30,9 +43,48 @@ border-radius: 5px;
   /* transition: 100ms ease-in-out; */
 }
 
-.newBtn {
-  margin: 0 auto;
+/* #newBtn {
+  margin: 30px  auto;
+  background: #8f7a66;
+  border-radius: 5px;
+  padding: 0 20px;
+  text-decoration: none;
+  color: #f9f6f2;
+  height: 40px;
+  line-height: 42px;
+  display: block;
+  text-align: center; */
+ 
+#newBtn {
+  align-items: center;
+  appearance: button;
+  background-color: #8f7a66;
+  border-radius: 8px;
+  border-style: none;
+  box-shadow: rgba(255, 255, 255, 0.26) 0 1px 2px inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 0;
+  font-family: "RM Neue",sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 30px auto;
+  padding: 10px 21px;
+  text-align: center;
+  text-transform: none;
+  transition: color .13s ease-in-out,background .13s ease-in-out,opacity .13s ease-in-out,box-shadow .13s ease-in-out;
+  user-select: none;
+  touch-action: manipulation;
 }
+
+#newBtn:hover {
+  background-color: whitesmoke;
+}
+
+
 
 
 .x2 {
